--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,15 +1,18 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+    <img src="/assets/imgs/sodimac-logo.png" />
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   The world is your oyster.
+  Firs image <br>
+  <img src="http://192.168.1.2:8080/GesatepedWS/images/snoopy.jpg">
+
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
   <button ion-button (click)="login()">Iniciar</button>
+
+
 </ion-content>
