Corrección de bug en foto, visualización de fotografía tomada.

--- a/src/pages/despacho/despacho.html
+++ b/src/pages/despacho/despacho.html
@@ -40,6 +40,9 @@
           <div>
             <button ion-button (click)="obtenerImagen()"><ion-icon name="camera"></ion-icon></button>
           </div>
+          <div>
+            <img src="{{imageFormat}}{{detalleHojaRuta.fotoDespachoPedido}}">
+          </div>
         </div>
       </ion-col>
     </ion-row>
