--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -27,7 +27,7 @@
                 class="gesatepedSelect"
     >
       <ion-option *ngFor="let choferItem of choferes" [value]="choferItem">
-        {{choferItem.numeroBrevete}}
+        {{choferItem.apellidos}}, {{choferItem.nombres}}
       </ion-option>
     </ion-select>
 
