--- a/src/pages/pedido/pedido.html
+++ b/src/pages/pedido/pedido.html
@@ -25,7 +25,7 @@
         <img src="/assets/imgs/business_package.png">
       </ion-avatar>
       <div class="list-detail">
-        <div>Codigo de producto: {{detalle.producto.codigo}}</div>
+        <div>Código de producto: {{detalle.producto.codigo}}</div>
         <div>Descripción: {{detalle.producto.nombre}} {{detalle.producto.marca}}</div>
         <div>Cantidad: {{detalle.cantidadProducto}}</div>
       </div>
@@ -33,5 +33,5 @@
 
 
   </ion-list>
-  <button ion-button block (click)="salir()">salir</button>
+  <button ion-button block round color="danger" (click)="salir()">salir</button>
 </ion-content>
