--- a/src/pages/despacho/despacho.html
+++ b/src/pages/despacho/despacho.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <img src="/assets/imgs/sodimac-logo.png" />
+    <img src="/assets/imgs/sodimac-logo-transparent.png" width="215" height="50" alt="sodimac-logo"/>
   </ion-navbar>
 
 </ion-header>
@@ -16,70 +16,86 @@
 <ion-content padding>
   <div class="header">Despachando: {{detalleHojaRuta.pedido.codigoPedido}}</div>
   <hr>
-
+  <ion-segment color="primary" [(ngModel)]="modo">
+    <ion-segment-button value="atencion">
+      Atención
+    </ion-segment-button>
+    <ion-segment-button value="incumplimiento">
+      Incumplimiento
+    </ion-segment-button>
+  </ion-segment>
   <ion-grid>
-    <ion-row>
-      <ion-col *ngIf="validacion">
-        <ion-label>{{validacion}}</ion-label>
-      </ion-col>
-
-    </ion-row>
-    <ion-row>
+    <ion-row *ngIf="modo == 'atencion'" [formGroup]="atencionForm" class="form">
       <ion-col>
-        <h4>Seleccione el modo de atención: </h4>
-        <ion-select placeholder="Seleccionar" [(ngModel)]="modo">
-          <ion-option value="atencion">Atendido</ion-option>
-          <ion-option value="incumplimiento">No Atendido</ion-option>
-        </ion-select>
-      </ion-col>
-    </ion-row>
-
-    <ion-row *ngIf="modo == 'atencion'">
-      <ion-col>
-        <h4>Ingrese el número de verificación provisto por el cliente: </h4>
+        <ion-label text-wrap>Ingrese el número de verificación provisto por el cliente: </ion-label>
         <div>
+          <ion-item class="invalid-message" *ngIf="numeroVerificacionControl.hasError('required') && numeroVerificacionControl.touched">
+            Debe ingresar el número de verificación.
+          </ion-item>
+          <ion-item class="invalid-message" *ngIf="responseCode == -3">
+            {{validacionAtencion}}
+          </ion-item>
           <ion-input type="number" placeholder="Número de Verificación"
+                     [class.input-fail]="(!numeroVerificacionControl.valid && numeroVerificacionControl.touched)
+                        || responseCode == -3"
                      (change) = "clearValidation()"
+                     formControlName = "numeroVerificacionControl"
                      [(ngModel)] = "detalleHojaRuta.pedido.numeroVerificacion"></ion-input>
         </div>
       </ion-col>
     </ion-row>
-    <ion-row *ngIf="modo == 'incumplimiento'">
+    <ion-row *ngIf="modo == 'incumplimiento'" [formGroup]="incumplimientoForm" class="form">
       <ion-col class="item-select-customizado">
-        <ion-label>Motivo</ion-label>
-        <ion-select placeholder="Seleccionar" [(ngModel)]="detalleHojaRuta.motivo">
+        <ion-label text-wrap>Seleccione el motivo por el cual no puede atender el despacho.</ion-label>
+        <ion-item class="invalid-message" *ngIf="motivoControl.hasError('required') && motivoControl.touched">
+          Debe seleccionar el motivo.
+        </ion-item>
+        <ion-select placeholder="Seleccionar"
+                    [class.input-fail]="!motivoControl.valid && motivoControl.touched"
+                    formControlName = "motivoControl"
+                    [(ngModel)]="detalleHojaRuta.motivo" cancelText="Cancelar">
           <ion-option *ngFor="let motivoItem of motivos" [value]="motivoItem" >
             {{motivoItem.descripcion}}
           </ion-option>
         </ion-select>
       </ion-col>
     </ion-row>
-    <ion-row *ngIf="modo == 'atencion' || modo == 'incumplimiento'">
-      <ion-col>
-        <div text-center>
-          <button ion-button round icon-only (click)="obtenerImagen()"><ion-icon name="camera"></ion-icon></button>
-        </div>
 
-      </ion-col>
-    </ion-row>
     <ion-row *ngIf="detalleHojaRuta.fotoDespachoPedido">
       <ion-col>
         <ion-item>
-          <div>
+          <ion-thumbnail item-start>
             <img src="{{imageFormat}}{{detalleHojaRuta.fotoDespachoPedido}}">
-          </div>
+          </ion-thumbnail>
+          <p>Ver Foto Adjunta</p>
+
         </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row *ngIf="modo == 'atencion' || modo == 'incumplimiento'">
+      <ion-col>
+        <button ion-button block round outline icon-only
+                  (click)="obtenerImagen()">
+            <ion-icon name="camera"></ion-icon>
+          </button>
+
       </ion-col>
     </ion-row>
     <ion-row *ngIf="modo == 'atencion'" text-center>
       <ion-col>
-        <button ion-button block round (click)="registrarAtencion()">Confirmar</button>
+        <ion-item class="invalid-message" *ngIf="validacionAtencion && responseCode != -3">
+          {{validacionAtencion}}
+        </ion-item>
+        <button ion-button block round (click)="registrarAtencion()" [disabled]="!atencionForm.valid">Confirmar</button>
       </ion-col>
     </ion-row>
 
     <ion-row *ngIf="modo == 'incumplimiento'" text-center>
       <ion-col>
-        <button ion-button block round (click)="registrarIncumplimiento()">Confirmar</button>
+        <ion-item class="invalid-message" *ngIf="validacionIncumplimiento">
+          {{validacionIncumplimiento}}
+        </ion-item>
+        <button ion-button block round (click)="registrarIncumplimiento()" [disabled]="!incumplimientoForm.valid">Confirmar</button>
       </ion-col>
     </ion-row>
 
