--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <img src="/assets/imgs/sodimac-logo.png" width="225" height="52" alt="sodimac-logo" />
-
+    <img src="/assets/imgs/sodimac-logo-transparent.png" width="215" height="50" alt="sodimac-logo"/>
   </ion-navbar>
 </ion-header>
 
@@ -33,7 +32,7 @@
         <ion-row *ngIf="CONNECTED">
           <ion-col>
             El sistema está listo para atender sus pedidos
-            <button ion-button block color="primary" (click)="login()">Iniciar atención</button>
+            <button ion-button block round color="primary" (click)="login()">Iniciar atención</button>
           </ion-col>
         </ion-row>
       </ion-grid>
