Fix de observaciones pendientes

--- a/src/pages/hoja-ruta/hoja-ruta.html
+++ b/src/pages/hoja-ruta/hoja-ruta.html
@@ -68,7 +68,7 @@
 
   </div>
   <div id="problema" *ngIf="hojaRuta && !hojaRuta.codigo">
-    <div>Sr. {{chofer.apellidos}}, {{chofer.nombres}}; Usted no cuenta con hoja de ruta asignada hoy</div>
+    <div>Sr. {{chofer.apellidos}}, {{chofer.nombres}}; usted no cuenta con hoja de ruta asignada hoy</div>
   </div>
   <ion-fab bottom right>
     <button ion-fab mini (click)="returnToHome()"><ion-icon name="home"></ion-icon></button>
